--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,12 +11,9 @@
       "type": "extensionHost",
       "request": "launch",
       "runtimeExecutable": "${execPath}",
-      "args": [
-        "--extensionDevelopmentPath=${workspaceFolder}"
-      ],
-      "outFiles": [
-        "${workspaceFolder}/out/**/*.js"
-      ]
+      "args": ["--extensionDevelopmentPath=${workspaceFolder}"],
+      "env": {},
+      "outFiles": ["${workspaceFolder}/dist/**/*.js"]
     }
   ]
 }
