extension: Fix codelens detection and activating extension on yaml open
Signed-off-by: ashu8912 <aghildiyal@microsoft.com>

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "redhat.vscode-yaml"
   ],
   "activationEvents": [
-    "onDebug:dalec-buildx"
+    "onDebug:dalec-buildx",
+    "onLanguage:yaml",
+    "workspaceContains:**/*.yaml",
+    "workspaceContains:**/*.yml"
   ],
   "preview": true,
   "main": "./dist/extension.js",
