--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -54,6 +54,7 @@ jobs:
     name: publish
     runs-on: ubuntu-latest
     needs: JobBuild
+    environment: vscode-marketplace
     permissions:
       actions: read
       contents: write
