--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dalec-vscode-tools",
   "displayName": "DALEC VSCode Tools",
   "description": "dalec vscode extension for developers",
-  "version": "0.0.1-alpha",
+  "version": "0.0.1",
   "publisher": "ms-kubernetes-tools",
   "icon": "resources/dalec.png",
   "engines": {
