--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,20 @@
 {
-	"compilerOptions": {
-		"module": "Node16",
-		"target": "ES2022",
-		"lib": [
-			"ES2022"
-		],
-		"sourceMap": true,
-		"rootDir": "src",
-		"strict": true,   /* enable all strict type-checking options */
-		/* Additional Checks */
-		// "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
-		// "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
-		// "noUnusedParameters": true,  /* Report errors on unused parameters. */
-	}
+    "compilerOptions": {
+        "module": "CommonJS",
+        "target": "es2024",
+        "outDir": "out",
+        "lib": ["ES2024"],
+        "sourceMap": true,
+        "rootDir": ".", /* This is not the `src` directory because some TS files import `package.json` */
+        "strict": true, /* enable all strict type-checking options */
+        "noUnusedLocals": true, /* Report errors on unused locals. */
+        "noImplicitReturns": true, /* Report error when not all code paths in function return a value. */
+        "noFallthroughCasesInSwitch": true, /* Report errors for fallthrough cases in switch statement. */
+        "noUnusedParameters": true,  /* Report errors on unused parameters. */
+        "resolveJsonModule": true, /* Needed to resolve JSON file imports, e.g. package.json */
+        "esModuleInterop": true, /* Needed to resolve JSON file imports, e.g. package.json */
+        "skipLibCheck": true,
+        "moduleResolution": "node"
+    },
+    "include": ["src"]
 }
